# PartnersAPI

./: Dockerfile  docker-compose.yaml  pre-commit-config.yaml  pyproject.toml
api/: app.py
api/errors/: messages.py
scripts/: InstallRequirements.sh
