[tool.poetry]
name = "partnersapi"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.3.2"
flask-jwt-extended = "4.5.2"
Flask-Migrate = "4.0.4"
flask-smorest = "0.42.0"
flask-sqlalchemy = "2.5.1"
marshmallow = "3.19.0"
passlib = "1.7.4"
pre-commit = "3.3.2"
psycopg2-binary = "*"
psycopg2 = "*"
python-dotenv = "1.0.0"
sqlalchemy = "2.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
